# SemantiKet

./: .gitignore  CMakeLists.txt  semantiket-IR-codes.txt
examples/: lexer-test0.sket  plural.sket  test-lexer1.sket  test-lexer2.sket
src/: SemantiKet.cpp  SemantiKet.h
src/core/AST/: AST.cpp  AST.h  ASTStatements.cpp  ASTStatements.h  Assignment.cpp  Assignment.h  Chunk.cpp  Chunk.h  ChunkRule.cpp  ChunkRule.h  ContextAssignment.cpp  ContextAssignment.h  ContextSwitch.cpp  ContextSwitch.h  FunctionDefinition.cpp  FunctionDefinition.h  GlobalAssignment.cpp  GlobalAssignment.h  Internal.cpp  Internal.h  Leaf.cpp  Leaf.h  LearnRule.cpp  LearnRule.h  Node.cpp  Node.h  NodeType.cpp  NodeType.h  Root.cpp  Root.h
src/core/ASTVisitor/: ASTVisitor.h  GraphTree.h  MakeSymbolTables.h  PrintTree.h
src/core/Diff/: diff.cpp  diff.h  diff_match_patch.h
src/core/Error/: Error.cpp  Error.h  ErrorMap.cpp  ErrorMap.h  Warning.cpp  Warning.h
src/core/Parser/: Driver.cpp  Driver.h  Parser-v1.y  Parser-v2.y  Parser.y  Scanner.h  Scanner.l  Serial.h  snazzle.l  snazzle.y  token.cpp  token.h  tree.cpp  tree.h
src/core/Rule/: Rule.cpp  Rule.h
src/core/Scope/: BaseScope.h  GlobalScope.cpp  GlobalScope.h  LocalScope.cpp  LocalScope.h
src/core/ScopedSymbol/: BaseScopedSymbol.h  ContextSymbol.cpp  ContextSymbol.h  FunctionSymbol.cpp  FunctionSymbol.h
src/core/Sequence/: Superposition.cpp  Superposition.h
src/core/SymTable/: BaseSymbol.cpp  BaseSymbol.h  SymTable.cpp  SymTable.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  SymbolType.cpp  SymbolType.h  VariableSymbol.cpp  VariableSymbol.h
src/core/Symbol/: BaseSymbol.cpp  BaseSymbol.h  ConstantSymbol.cpp  ConstantSymbol.h  FrameSymbol.cpp  FrameSymbol.h  KetSymbol.cpp  KetSymbol.h  Symbol.cpp  Symbol.h  VariableSymbol.cpp  VariableSymbol.h
src/core/UnitTest/: UnitTest.cpp  UnitTest.h
src/core/misc/: misc.cpp  misc.h
tests/parser/: alias.sket  arithmetic.sket  assignment.sket  bool-combination.sket  bra-ket.sket  bracket-seq.sket  chain-sequence.sket  chunk-notation.sket  comments.parsed.dot  comments.parsed.txt  comments.sket  comparison.sket  compound-fn-params.sket  constants.sket  context.sket  curly-seq.sket  equality.sket  error.sket  for-loop.sket  for-loops.sket  function-definition.sket  if-statement.sket  learn-negation.parsed.dot  learn-negation.parsed.txt  learn-rule.sket  params-functions.sket  parse-fail.sket  powered-op.sket  powered-operators.sket  simple-assignment.parsed.dot  simple-assignment.parsed.txt  simple-assignment.sket  simple-bra-kets.sket  simple-learn-rules.parsed.dot  simple-learn-rules.parsed.txt  simple-learn-rules.sket  simple-superpositions.sket  simple-wildcard-learn-rules.sket  such-that.sket  unpack-sp-learn-rule.sket  (+3 more)
tests/parser-v1/: incomplete-assignment.sket  learn-negation.sket  powered-operators.sket  simple-assignment.sket  simple-chains.sket  simple-comparisons.sket  simple-equality.sket  simple-function-definitions.sket  simple-ranges.sket  simple-sequence-brackets.sket  string-concatenation.sket
tests/symtab/: assignment.sket  chunks.sket  context.sket  function-defintion.sket  learn-rules.sket  small-context.sket  symbols.sket
